# templates

./: Cargo.toml
.templates/cpp:class/: §%{className}.cpp  §%{className}.hpp
.templates/icw::gun/: §%{name}.js
dir_aaa/: f_ddd
src/: main.rs
