[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
opener = "0.5.0"
regex = "1.6.0"
lazy_static = "1.4.0"
text_io = "0.1.12"
zip = "0.6.2"
directories = "4.0.1"
reqwest = { version = "0.11.11", features = ["blocking"] }